[metadata]
name = 'gyp3',
version = '6.0.0',
description = 'Generate You Projects 3',
author = 'Refael Ackermann',
author_email = 'refack@gmail.com',
url = 'https://gyp3.org',
package_dir = {'': 'lib'},
packages = ['gyp', 'gyp.generator'],
entry_points = {'console_scripts': ['gyp=gyp:script_main']}

[flake8]
exclude = .venv,out,testlib/SConsLib
select = E9,F8
