# Copyright 2018 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

# All build targets below are experimental and not used within the
# Chromium / V8 / etc. trees yet thus far. Do not depend on anything.

import("//testing/test.gni")

static_library("json_parser") {
  sources = [
    "encoding/json_parser.cc",
    "encoding/json_parser.h",
    "encoding/json_parser_handler.h",
    "encoding/platform.h",
    "encoding/span.h",
    "encoding/status.h",
    "encoding/str_util.cc",
    "encoding/str_util.h",
  ]
}

static_library("linux_dev_platform") {
  sources = [
    "encoding/linux_dev_platform.cc",
    "encoding/linux_dev_platform.h",
    "encoding/platform.h",
  ]
}

test("json_parser_test") {
  sources = [
    "encoding/json_parser_test.cc",
  ]
  deps = [
    ":json_parser",
    ":linux_dev_platform",
    "//base",
    "//testing/gmock:gmock",
    "//testing/gtest:gtest",
    "//testing/gtest:gtest_main",
  ]
}

static_library("cbor") {
  sources = [
    "encoding/cbor.cc",
    "encoding/cbor.h",
    "encoding/json_parser_handler.h",
    "encoding/span.h",
    "encoding/status.h",
  ]
  deps = [
    ":json_parser",
  ]
}

test("cbor_test") {
  sources = [
    "encoding/cbor_test.cc",
  ]
  deps = [
    ":cbor",
    ":json_std_string_writer",
    ":linux_dev_platform",
    "//base",
    "//testing/gmock:gmock",
    "//testing/gtest:gtest",
    "//testing/gtest:gtest_main",
  ]
}

test("span_test") {
  sources = [
    "encoding/span.h",
    "encoding/span_test.cc",
  ]
  deps = [
    "//base",
    "//testing/gmock:gmock",
    "//testing/gtest:gtest",
    "//testing/gtest:gtest_main",
  ]
}

static_library("json_std_string_writer") {
  sources = [
    "encoding/json_parser_handler.h",
    "encoding/json_std_string_writer.cc",
    "encoding/json_std_string_writer.h",
  ]
}

test("json_std_string_writer_test") {
  sources = [
    "encoding/json_std_string_writer_test.cc",
  ]
  deps = [
    ":json_std_string_writer",
    ":linux_dev_platform",
    "//base",
    "//testing/gmock:gmock",
    "//testing/gtest:gtest",
    "//testing/gtest:gtest_main",
  ]
}
